--- a/SimpleParticleEditor/include/CMakeLists.txt
+++ b/SimpleParticleEditor/include/CMakeLists.txt
@@ -2,5 +2,6 @@ set(PROJECT_SRC
   ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/Game.hpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/States.hpp 
-  ${CMAKE_CURRENT_SOURCE_DIR}/MyFirstState.hpp 
+  ${CMAKE_CURRENT_SOURCE_DIR}/ParticleState.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/SpriteState.hpp
   PARENT_SCOPE)
