--- a/SimpleParticleEditor/src/CMakeLists.txt
+++ b/SimpleParticleEditor/src/CMakeLists.txt
@@ -2,5 +2,6 @@ set(PROJECT_SRC
   ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/Game.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/MyFirstState.cpp 
+  ${CMAKE_CURRENT_SOURCE_DIR}/ParticleState.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/SpriteState.cpp
   PARENT_SCOPE)
