--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Install linux Dependencies
       if: runner.os == 'Linux'
-      run: sudo apt-get install libgtk-3-dev libenet-dev libxrandr-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev
+      run: sudo apt-get update && sudo apt-get install libgtk-3-dev libenet-dev libxrandr-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
