--- a/SimpleParticleEditor/SimpleParticleEditor.vcxproj.filters
+++ b/SimpleParticleEditor/SimpleParticleEditor.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\SpriteState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\PostVerticalFlip.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.hpp">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\SpriteState.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PostVerticalFlip.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
