--- a/SimpleParticleEditor/src/CMakeLists.txt
+++ b/SimpleParticleEditor/src/CMakeLists.txt
@@ -3,5 +3,6 @@ set(PROJECT_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/Game.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ParticleState.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/PostVerticalFlip.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SpriteState.cpp
   PARENT_SCOPE)
